# MCWorldTools

./: .gitignore  README.md  setup.cfg
mcworldtools/: main.py
mcworldtools/tools/: find_blocks.py  find_entities.py  remove_unused_chunks.py
src/mcworldtools/: main.py  util.py
src/mcworldtools/tools/: blocks.py  command_blocks.py  entities.py  find_blocks.py  find_command_blocks.py  remove_unused_chunks.py
world-tools/tools/: remove_unused_chunks.py
worldtools/: main.py
worldtools/tools/: find_blocks.py  remove_unused_chunks.py
