[metadata]
name = worldtools
version = 1.0
description = Useful tools for Minecraft worlds
long_description = Useful tools for Minecraft worlds such as remove unused chunks, find blocks or entities.
keywords = minecraft, world, minecraft-world, nbt
license = GPL-3.0
license_files = LICENSE
classifiers =
    Topic :: Games/Entertainment
    Topic :: Utilities
    Development Status :: Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Natural Language :: English

[options]
packages = worldtools
install_requires =
    nbt >= 1.5.1
    pathlib
    tqdm

[options.entry_points]
console_scripts =
    worldtools = worldtools.main:main
