[metadata]
name = world-tools
version = 1.0
author = Rapha149
url = https://github.com/Rapha149/WorldTools
project_urls =
    Code = https://github.com/Rapha149/WorldTools
    Issues = https://github.com/Rapha149/WorldTools
description = Useful tools for Minecraft worlds
long_description = file: README.md
long_description_content_type = text/markdown
keywords = minecraft, world, minecraft-world, nbt
license = GPL-3.0
license_files = LICENSE
classifiers =
    Topic :: Games/Entertainment
    Topic :: Utilities
    Development Status :: Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Natural Language :: English

[options]
packages = world-tools
install_requires =
    nbt >= 1.5.1
    pathlib
    tqdm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    worldtools = world-tools.main:main
