[metadata]
name = mcworldtools
version = 1.2.4
author = Rapha149
url = https://github.com/Rapha149/MCWorldTools
project_urls =
    Code = https://github.com/Rapha149/MCWorldTools
    Issues = https://github.com/Rapha149/MCWorldTools
description = Useful tools for Minecraft worlds such as removing unused chunks and finding blocks, command blocks or entities.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = minecraft, world, minecraft-world, nbt
license = GPL-3.0
license_files = LICENSE
classifiers =
    Topic :: Games/Entertainment
    Topic :: Utilities
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Natural Language :: English

[options]
package_dir =
    =src
packages = find:
install_requires =
    nbt >= 1.5.1
    pathlib
    tqdm
    argparse
    pyyaml
    regex
    pyreadline
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mcworldtools = mcworldtools.main:main
